# voxlSyncVINS

./: LICENSE  README.md  voxl-camera-server.conf
imu_ros/src/voxl_imu_ros/: CMakeLists.txt  package.xml
imu_ros/src/voxl_imu_ros/common/: cal_file.c  cal_file.h  voxl_imu_server.h
imu_ros/src/voxl_imu_ros/server/: CMakeLists.txt
imu_ros/src/voxl_imu_ros/server/include/voxl_imu_ros/: config_file.h  f32_ringbuf.h  fft.h  icm20948_defs.h  icm42688.h  misc.h
imu_ros/src/voxl_imu_ros/server/src/: config_file.c  f32_ringbuf.c  fft.cpp  icm20948.c  icm42688.c  imu_interface.c  misc.c  mpu9250.c  node.cpp  timestamp.c
qrb5165-imu-server/: CHANGELOG  CMakeLists.txt  README.md  build.sh  install_build_deps.sh  make_package.sh
qrb5165-imu-server/build64/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
qrb5165-imu-server/build64/clients/: Makefile  cmake_install.cmake  voxl-calibrate-imu
qrb5165-imu-server/build64/server/: Makefile  cmake_install.cmake  voxl-imu-server
qrb5165-imu-server/clients/: CMakeLists.txt  regression.h  voxl-calibrate-imu-temp.c  voxl-calibrate-imu.c
qrb5165-imu-server/pkg/DEB/DEBIAN/: control
qrb5165-imu-server/pkg/DEB/etc/systemd/system/: voxl-imu-server.service
qrb5165-imu-server/pkg/DEB/usr/share/bash-completion/completions/: voxl-configure-imu
qrb5165-imu-server/pkg/control/: postinst
qrb5165-imu-server/server/: CMakeLists.txt
qrb5165-imu-server/server/include/: global_debug_flags.h  icm20948.h  icm42688_defs.h  imu_interface.h  mpu9250.h  mpu9250_defs.h  timestamp.h
qrb5165-imu-server/server/src/: icm20948.c  icm42688.c  imu_interface.c  main.cpp  mpu9250.c  timestamp.c
voxl-camera-server/: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  build.sh  install_build_deps.sh
voxl-camera-server/bash_completions/: voxl-bayer-stats  voxl-configure-cameras  voxl-image-stats
voxl-camera-server/include/: buffer_manager.h  cci_direct_helpers.h  common_defs.h  config_defaults.h  config_file.h  cv_routines.h  hal3_camera_manager.hpp  hal3_helpers.h  jpeg_size.h  misc.h  omx_video_encoder.h  pipe_clients.h  ringbuffer.h  tof_interface.hpp  voxl_camera_server.h
voxl-camera-server/misc_files/usr/share/modalai/voxl-camera-server/: camera_config.xml  custom_camera_config.txt
voxl-camera-server/misc_files/usr/share/modalai/voxl-camera-server/standard_configs/: 01 - ov7251 tracking ov7251 stereo  02 - ov7251 tracking  03 - ov7251 tracking ov7251 stereo imx214 hires  04 - ov7251 tracking imx214 hires  05 - pmd-tof ov7251 tracking  08 - imx214  09 - pmd-tof  10 - ov7251 stereo  11 - D0006 Sentinel  12 - ov9782 stereo  13 - ov9782 stereo imx214 hires  14 - ov9782 stereo pmd-tof ov7251 tracking (copy)  15 - D0008 dual 9782 tracking  16 - pmd-tof ov7251 dual tracking imx214 hires  17 - D0010 pmd-tof imx412 hires ov7251 tracking ov9782 stereo  18 - D0008 triple ov9782  19 - D0005 without tof imx214 hires ov7251 tracking  20 - D0011 imx412 hires ar0144 tracking  21 - old C6  22 - D0013 imx412 flipped ov7251  23 - D0010 without stereo
voxl-camera-server/pkg/control/: control  postinst
voxl-camera-server/scripts/: apq8096-configure-cameras  apq8096-print-camera-configs  print-camera-configs  qrb5165-configure-cameras  qrb5165-print-camera-configs  voxl-configure-cameras
voxl-camera-server/services/: voxl-camera-server.service
voxl-camera-server/src/: buffer_impl_apq8096.cpp  buffer_impl_qrb5165.cpp  buffer_manager.cpp  cci_direct_helpers.cpp  config_defaults.cpp  config_file.cpp  cv_routines.c  hal3_camera_mgr.cpp  hal3_helpers.cpp  main.cpp  misc.c  omx_video_encoder.cpp  pipe_clients.cpp  tof_interface.cpp
voxl-camera-server/tools/: CMakeLists.txt  camera-server-config-helper.cpp  voxl-bayer-stats.c  voxl-image-stats.c
voxl-docker/: .gitignore  .gitmodules  LICENSE  README.md  build-cross-docker.sh  build-hexagon-docker.sh  build-qrb5165-emulator.sh  install-emulator-docker.sh  install-voxl-docker-script.sh
voxl-docker/bash_utilities/: clean.sh  make_package.sh
voxl-docker/bash_utilities/fs/etc/: profile
voxl-docker/cross_toolchain/: installsdk.sh
voxl-docker/files/: 70-android.rules  hexagon_profile  opkg.conf  voxl-docker.sh  voxl-hexagon.Dockerfile
voxl-docker/qrb5165-emulator/: README.md  qrb5165-emulator-build.sh  qrb5165-emulator.Dockerfile
voxl-docker/voxl-cross/: aarch64-gnu-4.9.toolchain.cmake  aarch64-gnu-7.toolchain.cmake  aarch64-gnu-8.toolchain.cmake  arm-cross-compile-sources.list  arm-gnueabi-4.9.toolchain.cmake  opkg.conf  sources.list  update_cmake.sh  voxl-cross.Dockerfile  xenial-sources.list
voxl-docker/voxl-cross/cross_meta_pkg/DEBIAN/: control
voxl-mpa-to-ros/: .gitconfig  .gitignore  .gitlab-ci.yml  CHANGELOG  README.md  build.sh  clean.sh  deploy_to_voxl.sh  install_build_deps.sh  make_package.sh
voxl-mpa-to-ros/catkin_ws/: .gitignore
voxl-mpa-to-ros/catkin_ws/src/: CMakeLists.txt  package.xml
voxl-mpa-to-ros/catkin_ws/src/include/interfaces/: ai_detection_interface.h  all_interfaces.h  camera_interface.h  imu_interface.h  point_cloud_interface.h  stereo_interface.h  vio_interface.h
voxl-mpa-to-ros/catkin_ws/src/include/utils/: camera_helpers.h
voxl-mpa-to-ros/catkin_ws/src/launch/: voxl_mpa_to_ros.launch
voxl-mpa-to-ros/catkin_ws/src/src/: interface_manager.cpp
voxl-mpa-to-ros/catkin_ws/src/src/interfaces/: ai_detection_interface.cpp  camera_interface.cpp  imu_interface.cpp  point_cloud_interface.cpp  stereo_interface.cpp  vio_interface.cpp
voxl-mpa-to-ros/catkin_ws/src/src/utils/: camera_helpers.cpp  common_utils.cpp
voxl-mpa-to-ros/pkg/control/: control
voxl_mpa_ros_mod_ws/src/: CMakeLists.txt  LICENSE  package.xml
voxl_mpa_ros_mod_ws/src/include/: interface_manager.h
voxl_mpa_ros_mod_ws/src/include/interfaces/: all_interfaces.h  camera_interface.h  generic_interface.h  stereo_interface.h
voxl_mpa_ros_mod_ws/src/include/utils/: common_utils.h
voxl_mpa_ros_mod_ws/src/launch/: voxl_mpa_to_ros.launch
voxl_mpa_ros_mod_ws/src/msg/: AiDetection.msg
voxl_mpa_ros_mod_ws/src/src/: interface_manager_mod.cpp  mpa_ros_node.cpp
(+6 files in other folders)
